# react-native-audio-api

./: .eslintrc.js  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  LICENSE  README.md  THIRD_PARTY.md  lefthook.yml  package-lock.json  package.json  react-native-audio-api.podspec  react-native-audio-context.podspec  tsconfig.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  npm-audio-package-build.yml  npm-audio-publish-nightly.yml  npm-publish-nightly.yml  publish-docs.yml  spelling.yml  tests.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AudioContext.cpp  AudioContext.h  AudioDestinationNode.cpp  AudioDestinationNode.h  AudioNode.cpp  AudioNode.h  GainNode.cpp  GainNode.h  OnLoad.cpp  Oscillator.cpp  Oscillator.h  OscillatorNode.cpp  OscillatorNode.h  StereoPannerNode.cpp  StereoPannerNode.h
android/src/main/cpp/AudioAPI/: AudioAPI.cpp
android/src/main/cpp/AudioBuffer/: AudioBuffer.cpp  AudioBuffer.h
android/src/main/cpp/AudioBufferSourceNode/: AudioBufferSourceNode.cpp  AudioBufferSourceNode.h
android/src/main/cpp/AudioContext/: AudioContext.cpp  AudioContext.h
android/src/main/cpp/AudioDestinationNode/: AudioDestinationNode.h
android/src/main/cpp/AudioNode/: AudioNode.cpp  AudioNode.h
android/src/main/cpp/AudioParam/: AudioParam.cpp  AudioParam.h
android/src/main/cpp/BiquadFilterNode/: BiquadFilterNode.cpp  BiquadFilterNode.h
android/src/main/cpp/GainNode/: GainNode.cpp  GainNode.h
android/src/main/cpp/OscillatorNode/: OscillatorNode.cpp  OscillatorNode.h
android/src/main/cpp/StereoPannerNode/: StereoPannerNode.cpp  StereoPannerNode.h
android/src/main/java/com/audiocontext/: AudioContextModule.java  AudioContextPackage.java  AudioContextPackage.kt  AudioContextPackageeee.kt  JSIExamplePackage.kt  Oscillator.kt
android/src/main/java/com/audiocontext/context/: AudioContext.kt  AudioContextState.kt  BaseAudioContext.kt  ContextState.kt
android/src/main/java/com/audiocontext/jsi/: AudioContextModule.kt  JSIExampleModule.kt
android/src/main/java/com/audiocontext/nativemodules/: AudioContextModule.kt
android/src/main/java/com/audiocontext/nodes/: AudioBufferSourceNode.kt  AudioDestinationNode.kt  AudioNode.kt  AudioScheduledSourceNode.kt  GainNode.kt  PlaybackParameters.kt  StereoPannerNode.kt
android/src/main/java/com/audiocontext/nodes/audionode/: AudioNode.kt  ChannelCountMode.kt  ChannelInterpretation.kt
android/src/main/java/com/audiocontext/nodes/filter/: BiquadFilterNode.kt  FilterType.kt
android/src/main/java/com/audiocontext/nodes/gain/: GainNode.kt
android/src/main/java/com/audiocontext/nodes/oscillator/: OscillatorNode.kt  WaveType.kt
android/src/main/java/com/audiocontext/nodes/parameters/: AudioParam.kt  ParamChange.kt  ParamChangeComparator.kt  PlaybackParameters.kt
android/src/main/java/com/audiocontext/parameters/: AudioParam.kt  ParamChange.kt  ParamChangeComparator.kt  PlaybackParameters.kt
android/src/main/java/com/audiocontext/utils/: AudioBuffer.kt  Constants.kt
android/src/main/java/com/swmansion/audioapi/: AudioAPIPackage.kt
android/src/main/java/com/swmansion/audioapi/context/: AudioContext.kt  BaseAudioContext.kt  ContextState.kt
android/src/main/java/com/swmansion/audioapi/nativemodules/: AudioAPIModule.kt
android/src/main/java/com/swmansion/audioapi/nodes/: AudioBufferSourceNode.kt  AudioDestinationNode.kt  GainNode.kt  StereoPannerNode.kt
android/src/main/java/com/swmansion/audioapi/nodes/audionode/: AudioNode.kt
android/src/main/java/com/swmansion/audioapi/nodes/filter/: BiquadFilterNode.kt
android/src/main/java/com/swmansion/audioapi/nodes/oscillator/: OscillatorNode.kt  WaveType.kt
android/src/main/java/com/swmansion/audioapi/utils/: AudioBuffer.kt  Constants.kt
apps/common-app/: package.json  tsconfig.json
apps/common-example/: README.md  app.json  metro.config.js  package.json
apps/expo-example/: .gitignore  README.md  app.json  metro.config.js  package.json  tsconfig.json
apps/fabric-example/: babel.config.js  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
cpp/: AudioContextHostObject.cpp  AudioContextHostObject.h  AudioDestinationNodeHostObject.h  JSIExampleHostObject.cpp  JSIExampleHostObject.h  OscillatorHostObject.cpp  OscillatorHostObject.h  OscillatorNodeHostObject.cpp  OscillatorNodeHostObject.h  react-native-audio-context.cpp  react-native-audio-context.h
cpp/AudioBuffer/: AudioBufferHostObject.cpp  AudioBufferHostObject.h  AudioBufferWrapper.h
cpp/AudioBufferSourceNode/: AudioBufferSourceNodeHostObject.cpp  AudioBufferSourceNodeHostObject.h  AudioBufferSourceNodeWrapper.h
cpp/AudioContext/: AudioContextHostObject.cpp  AudioContextHostObject.h  AudioContextWrapper.h
cpp/AudioDestinationNode/: AudioDestinationNodeHostObject.cpp  AudioDestinationNodeHostObject.h  AudioDestinationNodeWrapper.h
cpp/AudioNode/: AudioNodeHostObject.cpp  AudioNodeHostObject.h  AudioNodeWrapper.h
cpp/AudioParam/: AudioParamHostObject.cpp  AudioParamHostObject.h  AudioParamWrapper.h
cpp/BiquadFilterNode/: BiquadFilterNodeHostObject.cpp  BiquadFilterNodeHostObject.h  BiquadFilterNodeWrapper.h
cpp/GainNode/: GainNodeHostObject.cpp  GainNodeHostObject.h  GainNodeWrapper.h
cpp/OscillatorNode/: OscillatorNodeHostObject.cpp  OscillatorNodeHostObject.h  OscillatorNodeWrapper.h
cpp/StereoPannerNode/: StereoPannerNodeHostObject.cpp  StereoPannerNodeHostObject.h  StereoPannerNodeWrapper.h
docs/: web-audio-coverage.md
example/: README.md  app.json  package.json
internal-docs/: basic-interfaces.md  web-audio-coverage.md
ios/: AudioAPIModule.h  AudioAPIModule.mm  AudioContext.h  AudioContext.mm  AudioContextModule.h  AudioContextModule.mm  JSIExampleModule.h  JSIExampleModule.mm
src/: AudioContext.ts  JSIExample.ts  NativeAudioContext.ts  Oscillator.ts  index.ts  index.tsx  types.d.ts  types.ts
(+275 files in other folders)
